Fixes styling of product content, spacing in tablet, desktop screen size

--- a/src/components/InfoBanner/InfoBanner.scss
+++ b/src/components/InfoBanner/InfoBanner.scss
@@ -3,5 +3,12 @@
 @use "../../styles/partials/colors" as *;
 
 .banner {
-    padding: 1rem 3rem;
+    padding: 1rem;
+    @include tablet {
+        padding: 1rem;
+    }
+
+    @include desktop {
+        padding: 2rem 1rem 0.5rem 1rem;
+    }
 }
