--- a/src/pages/ProductsPage/ProductsPage.scss
+++ b/src/pages/ProductsPage/ProductsPage.scss
@@ -22,7 +22,7 @@
     &__nav-list {
         @include ul-reset;
         display: flex;
-        gap: 1rem;
+        gap: 3rem;
         margin-left: 1rem;
 
         @include tablet {
@@ -64,7 +64,10 @@
         }
     }
 
-    &__top-bar {       
+    &__top-bar {      
+        display: flex;
+        justify-content: center;
+
         @include tablet {
             display: grid;
             grid-template-columns: 1fr 4fr;
@@ -91,7 +94,7 @@
         justify-content: flex-end;
 
         @include tablet {
-            padding: .5rem 2rem;
+            padding: .5rem 1rem;
         }
     }
 
@@ -99,9 +102,7 @@
         @include tablet {
             display: grid;
             grid-template-columns: 1fr 4fr;
-            padding: 0 2rem;
-            // border-left: 1px solid lightgray;
-            // border-right: 1px solid lightgray;
+            padding: 0 1rem;
         }
 
         @include desktop {
